@@ -3,7 +3,6 @@
            xmlns:five="http://namespaces.zope.org/five"
            i18n_domain="eea.reports">
 
-    <include package="slc.publications.pdf" />
     <utility factory=".parser.PDFParser" />
     <utility factory=".updater.PDFMetadataUpdater" />
     <utility factory=".cover.PDFCoverImage" />
